# ssoni_additional_files

./: README.md
HERoEHS-Math/heroehs_math/: CMakeLists.txt  package.xml
HERoEHS-Math/heroehs_math/include/heroehs_math/: fifth_order_trajectory_generate.h  heroehs_math.h  heroehs_pid_control.h  heroehs_pid_controller_2.h  heroehs_signal_processing.h  kinematics.h
HERoEHS-Math/heroehs_math/src/: end_point_to_rad_cal.cpp  fifth_order_trajectory_generate.cpp  heroehs_pid_control.cpp  heroehs_pid_controller_2.cpp  heroehs_signal_processing.cpp  kinematics.cpp
